--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Hello there, awesome person!
         <title>My awesome web page</title>
     </head>
 
-    <body>
+    <body> <h1> hello </h1>
         Hello there, awesome person!
     </body>
 </html>
