--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ Hello there, awesome person!
         <title>My awesome web page</title>
     </head>
 
-    <body> <h1> hello </h1>
+<img src="https://avatars.githubusercontent.com/u/98469484?v=4">
+
         Hello there, awesome person!
     </body>
 </html>
