--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ Hello there, awesome person!
      <head>
         <title>My awesome web page</title>
     </head>
-
+     <body>
+<h1>hello</h1>
 <img src="https://avatars.githubusercontent.com/u/98469484?v=4">
 
         Hello there, awesome person!
