--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@ Hello there, awesome person!
      <body>
 <h1>hello</h1>
 <img src="https://avatars.githubusercontent.com/u/98469484?v=4">
-
+   
         Hello there, awesome person!
+          <ol>
+    <li>get into pc</li>
+    <li>github</li>
+    <li>online c combiler</li>
+</ol>
     </body>
 </html>
