--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ Hello there, awesome person!
    
         Hello there, awesome person!
           <ol>
-    <li>get into pc</li>
-    <li>github</li>
-    <li>online c combiler</li>
+    <li><a href="https://getintopc.com">This is a link to getintopc!</a></li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
+    <li><a href="https://www.onlinegdb.com">This is a link to online gdb!</a></li>
 </ol>
     </body>
 </html>
