--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 Hello there, awesome person!
 <html>
      <head>
-        <title>My awesome web page</title>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
      <body>
 <h1>hello</h1>
